<resources>
    <string name="app_name">笑递</string>
    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="cancel">取消</string>
    <string name="hall">大厅</string>
    <string name="reward_hall">悬赏大厅</string>
    <string name="go_out_hall">出行大厅</string>
    <string name="communication">交流</string>
    <string name="message">消息</string>
    <string name="message_hall">消息大厅</string>
    <string name="my">我的</string>
    <string name="detail">详情</string>
    <string name="me">我</string>
    <string name="invite_code">邀请码（可不填）</string>
    <string name="Current_account">当前账户</string>
    <string name="data_loading_fail">数据加载失败</string>
    <string name="not_sign_repeat">亲，请不要重复签到</string>
    <string name="place_match">输入搜索</string>
    <string name="type">类型</string>
    <string name="smile_point">笑点</string>
    <string name="smile_point_sort">笑点排序</string>
    <string name="all_smile_point">笑点总额：</string>
    <string name="smile_point.">笑点:</string>
    <string name="weight">重量</string>
    <string name="weight_with_unit">重量(Kg)</string>
    <string name="default_user_name">笑递</string>
    <string name="default_user_phone">11111111111</string>
    <string name="phone">电话:</string>
    <string name="phone.">电话:</string>
    <string name="everyday_sign">每日签到</string>
    <string name="sign">签到</string>
    <string name="sign_success">签到成功</string>
    <string name="sign_fail">签到失败</string>
    <string name="default_credit">5.0</string>
    <string name="credit">信誉</string>
    <string name="wallet">钱包</string>
    <string name="carry_recode">代送记录</string>
    <string name="setting">设置</string>
    <string name="default_wallet">0</string>
    <string name="go_limited_time">截止时间:</string>
    <string name="default_go_limited_time">07-29 22:36</string>
    <string name="default_weight">轻</string>
    <string name="nickname">昵称:</string>
    <string name="sex">性别:</string>
    <string name="default_sex">男</string>
    <string name="cellphone">手机号：</string>
    <string name="use_alipay">使用微信支付</string>
    <string name="onlycellphone">手机号</string>
    <string name="user_number">账号</string>
    <string name="nick_name">昵称</string>
    <string name="user_name">用户名（无法修改）</string>
    <string name="user_password">密码</string>
    <string name="recharge_xd">充笑点</string>
    <string name="forget_password">忘记密码</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="nearby">附近</string>
    <string name="grade">评分</string>
    <string name="completeInfo">完善资料</string>
    <string name="grade.">评分:</string>
    <string name="xd_phone">客服电话</string>
    <string name="xd_phone_number">15111929296</string>
    <string name="service_treaty">服务条款协议</string>
    <string name="drowdowncanrefresh">下拉刷新</string>
    <string name="five_rmb">5元</string>
    <string name="recharge_tip">充值金额只用于平台消费，不可提现。收款方为第三方支付服务商，付款后您的笑点将会进行充值，如有问题，请联系笑递客服15111929296</string>
    <string name="withdraw_balance">可提现笑点</string>
    <string name="withdraw_alipay">提现到微信账户</string>
    <string name="withdraw_xd">提现笑点</string>
    <string name="five_xd_point">500笑点</string>
    <string name="drowupcanget">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_complete">刷新成功</string>
    <string name="preupdatetime">上次刷新时间:</string>
    <string name="getmore">加载更多...</string>
    <string name="xd_750">750笑点</string>
    <string name="xd_1000">1000笑点</string>
    <string name="xd_1500">1500笑点</string>
    <string name="xd_2500">2500笑点</string>
    <string name="xd_4000">4000笑点</string>
    <string name="xd_6000">6000笑点</string>
    <string name="rmb_5">5元</string>
    <string name="rmb_9">9元</string>
    <string name="rmb_16">16元</string>
    <string name="rmb_27">27元</string>
    <string name="rmb_45">45元</string>
    <string name="rmb_69">69元</string>
    <string name="withdraw_text">亮笑点可提取现金</string>
    <string name="send_reward">发悬赏</string>
    <string name="send_travel">秀出行</string>
    <string name="default_time">00:00</string>
    <string name="history_grade">历史评价</string>
    <string name="you_have_pay">您已经支付笑点</string>
    <string name="you_have_get_pay">您已经收到笑点</string>
    <string name="confirm">确定</string>
    <string name="give_grade">打分</string>
    <string name="evaluate">评价</string>
    <string name="write_evaluate">写下你对笑递员的评价吧！</string>
    <string name="password_reset">登录密码重置</string>
    <string name="login_register">登录/注册</string>
    <string name="msg_setting">消息设置</string>
    <string name="recharge">充值</string>
    <string name="aboutxd">关于笑递</string>
    <string name="exit_account">退出账户</string>
    <string name="receive_new_msg_notify">接收新消息通知</string>
    <string name="receive_msg_open">已开启</string>
    <string name="receive_msg_close">已关闭</string>
    <string name="error">错误</string>
    <string name="confirmpass.">确认密码:</string>
    <string name="confirmpass">确认密码</string>
    <string name="new_pass">新密码</string>
    <string name="now_pass">现密码</string>
    <string name="send">发送</string>
    <string name="only_phone">电话</string>
    <string name="take_photo">拍照</string>
    <string name="photo">照片</string>
    <string name="vertify_number">验证码</string>
    <string name="vertify_phone">验证手机号</string>
    <string name="get">获取</string>
    <string name="get2">领取</string>
    <string name="reset_pass">重设密码</string>
    <string name="confirm_pass">确认密码</string>
    <string name="school">学校</string>
    <string name="school_divide">校区</string>
    <string name="school_number">学号</string>
    <string name="school_pass">教务网密码</string>
    <string name="total_times">总次数:</string>
    <string name="get_smile_point">赚笑点:</string>
    <string name="sign_in">签到</string>
    <string name="default_month">1月</string>
    <string name="default_date">2016-7-10</string>
    <string name="you_sure">你确定</string>
    <string name="hava_complete">已完成</string>
    <string name="have_complete..">已完成?</string>
    <string name="other_login">其他登录</string>
    <string name="explain_word">文字说明:</string>
    <string name="start_place">出发地:</string>
    <string name="have_real_name_identificate">已实名认证</string>
    <string name="real_name_identificate">实名认证</string>
    <string name="no_real_name_identificate">未实名认证</string>
    <string name="have_get_orders.">已接单:</string>
    <string name="end_place">目的地</string>
    <string name="contact">联系</string>
    <string name="owner">物主</string>
    <string name="sound">声音</string>
    <string name="shake">震动</string>
    <string name="weight_light">轻</string>
    <string name="weight_middle">中</string>
    <string name="weight_heavy">重</string>
    <string name="photo_load_fail">图片加载失败</string>
    <string name="photo_save_path">/xd/crop_photo/</string>
    <string name="validator_email">非法的电子邮箱！</string>
    <string name="validator_empty">输入不能为空！</string>
    <string name="validator_url">网络地址不正确!</string>
    <string name="validator_confirm">密码不能通过确认！</string>
    <string name="validator_alnum">输入只能为英文字母！</string>
    <string name="validator_hex">输入只能是十六进制数字！</string>
    <string name="validator_regexp">输入不合法！</string>
    <string name="validator_phone">非法电话号码！</string>
    <string name="vertify_have_send">验证码已经发送</string>
    <string name="vertify_success">验证成功</string>
    <string name="vertify_fail">验证码错误</string>
    <string name="verify_send_fail">验证码发送失败</string>
    <string name="account_have_register">手机号已经注册</string>
    <string name="register_success">注册成功</string>
    <string name="register_fail">注册失败</string>
    <string name="net_work_is_fail">网络错误</string>
    <string name="is_getting_vertify">正在获取验证码...</string>
    <string name="is_registering">正在注册...</string>
    <string name="move_scale">移动和缩放</string>
    <string name="real_name">真实姓名</string>
    <string name="student">学生</string>
    <string name="withdraw">提现</string>
    <string name="one_week_cost_recard">笑点记录</string>
    <string name="invite_to_earn_money">邀请攒笑点</string>
    <string name="account_balance">账户余额：</string>
    <string name="release_reward">发布悬赏</string>
    <string name="teacher">老师</string>
    <string name="delete_success">删除成功</string>
    <string name="identificating">正在认证...</string>
    <string name="identificate_success">认证成功</string>
    <string name="identificate_fail">认证失败</string>
    <string name="logining">正在登录...</string>
    <string name="login_fail">登录失败</string>
    <string name="contact_stop_time">截止时间</string>
    <string name="show_go_out_text_des">附加文字说明(比如我不带什么)</string>
    <string name="share_at_same_time">同时分享到</string>
    <string name="qzone">QQ</string>
    <string name="share">分享</string>
    <string name="wechat">微信</string>
    <string name="weibo">微博</string>
    <string name="xd_public">发布</string>
    <string name="good_type">物品类型</string>
    <string name="express">快递</string>
    <string name="food">餐饮</string>
    <string name="paper">纸质</string>
    <string name="other">其他</string>
    <string name="please_select_good_type">请选择物品的代送类型</string>
    <string name="please_select_good_weight_type">请选择物品的重量类型</string>
    <string name="good_start_or_end_place_null">出发地、目的地不能为空</string>
    <string name="please_give_smile_point">请给笑点</string>
    <string name="phone_no_null">手机号不能为空</string>
    <string name="phone_no_right">手机号不正确</string>
    <string name="less_than_two">(&lt;2)</string>
    <string name="more_than_two_and_less_than_five">(2&lt;*&lt;5)</string>
    <string name="more_than_five">(&gt;5)</string>
    <string name="is_reset_pass">正在重设密码...</string>
    <string name="account_have_not_register">账户不存在</string>
    <string name="two_pass_different">两次密码不匹配</string>
    <string name="reset_pass_success">重置密码成功</string>
    <string name="reset_pass_fail">重置密码失败</string>
    <string name="is_publishing">正在发布...</string>
    <string name="public_success">发布成功</string>
    <string name="public_fail">发布失败</string>
    <string name="my_publish_record">我发布的代送</string>
    <string name="my_receive_record">我领取的代送</string>
    <string name="time_over_now">时间无法穿越哦</string>
    <string name="fifteen_xd_point">1550笑点</string>
    <string name="twenty_five_rmb">25元</string>
    <string name="fifty_xd_point">5100笑点</string>
    <string name="next">下一步</string>
    <string name="clip">裁剪头像</string>
    <string name="not_complate">未开通</string>
    <string name="tell_me_to_where">不知去向</string>
    <string name="xiaodi_attestation">笑递员已认证</string>
    <string name="xiaodi_attestation_not">笑递员未认证</string>
    <string name="key_word_search">关键字搜索</string>
    <string name="chongqinguniversity">重庆大学</string>
    <string name="no_more_data">没有更多数据了</string>
    <string name="no_such_reward">没有此代送任务</string>
    <string name="reward_detail">悬赏详情</string>
    <string name="set_deadline">设置截至时间</string>
    <string name="can_not_carry_owner">不能领取自己的悬赏哦</string>
    <string name="carry_success">领取成功</string>
    <string name="edit_reward">编辑悬赏</string>
    <string name="update">更新</string>
    <string name="edit_reward_success">修改成功</string>
    <string name="please_wait">请稍后...</string>
    <string name="double_click_to_delete">再次点击将删除</string>
    <string name="write_real_name">请填写实名</string>
    <string name="write_school_id">请填写学号</string>
    <string name="write_school_pass">请填写教务网密码</string>
    <string name="system_msg">系统消息</string>
    <string name="loading">正在加载...</string>
    <string name="my_carry_not_finish_reward">我领取的未完成的悬赏</string>
    <string name="eight_rmb">8元</string>
    <string name="eight_xd_poing">820笑点</string>
    <string name="fifteen_rmb">15元</string>
    <string name="twenty_five_xd_point">2575笑点</string>
    <string name="fifty_rmb">50元</string>
    <string name="one_hundred_rmb">100元</string>
    <string name="one_hundred_xd_point">10200笑点</string>
    <string name="airpay_account">支付宝账号</string>
    <string name="withdraw_tip">1-2工作日到账</string>
</resources>