<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/ac_top" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recharge_xd"
            android:textSize="18sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llRecharge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/id_ac_recharge_ll_five"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/rectangle_light_blue"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/five_rmb" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/five_xd_point" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/id_ac_recharge_ll_eight"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginLeft="@dimen/dimen_40"
                android:background="@drawable/rectangle_light_blue"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eight_rmb" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eight_xd_poing" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/id_ac_recharge_ll_fifteen"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginLeft="@dimen/dimen_40"
                android:background="@drawable/rectangle_light_blue"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fifteen_rmb" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fifteen_xd_point" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/id_ac_recharge_ll_twenty_five"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/rectangle_light_blue"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/twenty_five_rmb" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/twenty_five_xd_point" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/id_ac_recharge_ll_fifty"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginLeft="@dimen/dimen_40"
                android:background="@drawable/rectangle_light_blue"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fifty_rmb" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fifty_xd_point" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/id_ac_recharge_ll_one_hundred"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginLeft="@dimen/dimen_40"
                android:background="@drawable/rectangle_light_blue"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/one_hundred_rmb" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/one_hundred_xd_point" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/id_ac_recharge_btn_recharge"
        android:layout_width="200dp"
        android:layout_height="@dimen/big_btn_height"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/login_btn_selector"
        android:text="@string/recharge"
        android:textColor="@color/white"
        android:textSize="@dimen/normal_textsize" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="@dimen/dimen_30"
        android:text="@string/recharge_tip"
        android:textSize="15sp" />
</LinearLayout>