<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/ac_top" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:src="@drawable/line_thin_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dimen_20">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/airpay_account"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/id_ac_withdraw_et_airpay_count"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10"
                android:background="@null"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="#757575"
                android:textSize="18sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:src="@drawable/line_thin_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dimen_20">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/withdraw_balance"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/id_ac_withdraw_tv_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10"
                android:background="@null"
                android:text="@string/default_wallet"
                android:textSize="18sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:src="@drawable/line_thin_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dimen_20"
            android:visibility="gone">

            <ImageView
                android:id="@+id/id_ac_withdraw_iv_withdraw_Method"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:src="@drawable/weixin_pay" />

            <TextView
                android:id="@+id/id_ac_withdraw_tv_payMethod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10"
                android:text="@string/withdraw_alipay"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/withdraw_xd"
            android:textSize="18sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llRecharge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/id_ac_withdraw_ll_750"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/rectangle_light_blue"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/xd_750" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rmb_5" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/id_ac_withdraw_ll_1000"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginLeft="@dimen/dimen_40"
                android:background="@drawable/rectangle_light_blue"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/xd_1000" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rmb_9" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/id_ac_withdraw_ll_1500"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginLeft="@dimen/dimen_40"
                android:background="@drawable/rectangle_light_blue"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/xd_1500" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rmb_16" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/id_ac_withdraw_ll_2500"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/rectangle_light_blue"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/xd_2500" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rmb_27" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/id_ac_withdraw_ll_4000"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginLeft="@dimen/dimen_40"
                android:background="@drawable/rectangle_light_blue"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/xd_4000" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rmb_45" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/id_ac_withdraw_ll_6000"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginLeft="@dimen/dimen_40"
                android:background="@drawable/rectangle_light_blue"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/xd_6000" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rmb_69" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/id_ac_recharge_btn_withdraw"
        android:layout_width="200dp"
        android:layout_height="@dimen/big_btn_height"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/login_btn_selector"
        android:text="@string/withdraw"
        android:textColor="@color/white"
        android:textSize="@dimen/normal_textsize" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/dimen_30"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="@dimen/dimen_10"
        android:text="@string/withdraw_tip"
        android:textSize="15sp" />
</LinearLayout>