<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:orientation="vertical">

    <include layout="@layout/ac_top" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/total_times"
            android:textColor="@color/gainsboro" />

        <TextView
            android:id="@+id/id_sign_tv_all_signed_nums"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/default_wallet"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/get_smile_point"
            android:textColor="@color/gainsboro" />

        <TextView
            android:id="@+id/id_sign_earn_xd_grade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/default_wallet"
            android:textColor="@color/darkorange" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/line_thin_gray" />

    <TextView
        android:id="@+id/id_sign_tv_month"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:text="@string/default_credit"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/line_thin_gray" />

    <GridView
        android:id="@+id/id_sign_gv_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:clickable="false"
        android:numColumns="7"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/id_ac_sign_in_btn_confirm"
            android:layout_width="@dimen/edittext_width"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            android:background="@drawable/login_btn_selector"
            android:gravity="center"
            android:text="@string/sign"
            android:textColor="@color/text_color_white"
            android:textSize="@dimen/normal_textsize" />
    </RelativeLayout>

</LinearLayout>