<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#55555555"
    android:gravity="center">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="80dp"

        android:background="@drawable/circle_white_gray_20"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/id_pop_modifyname_tv_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:text="@string/nickname"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/id_pop_modifyname_et_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="15dp"
                android:background="@null"
                android:gravity="center"
                android:singleLine="true"
                android:textColor="@color/text_color_heavy_gray"
                android:textSize="20sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/id_pop_modifyname_btn_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/text_color_theme_green"
                android:textSize="15sp" />

            <Button
                android:id="@+id/id_pop_modifyname_btn_confirm"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/confirm"
                android:textColor="@color/text_color_theme_green"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>